--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <h2>About Me</h2>
-        <img src="your-photo.jpg" alt="Your Photo" />
+        <img src="MY PHOTO.jpg" alt="Your Photo" />
         <p>I am a student passionate about web development and constantly learning new technologies.</p>
     </section>
 
